--- a/Ex08.ipynb
+++ b/Ex08.ipynb
@@ -6,6 +6,7 @@
       "name": "Ex08.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
       "include_colab_link": true
     },
@@ -37,219 +38,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "WAAfM8RR_UvV",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Simplified Environment Impelmentation(4X4 Grid )"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "QygSU6cjkCRZ",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "\n",
-        "class Environment2:\n",
-        "  num_columns = 4\n",
-        "  grid_size = num_columns * num_columns\n",
-        "  \n",
-        "  actions = ['left', 'right', 'up', 'down']\n",
-        "  \n",
-        "  def __init__(self):\n",
-        "    self.s = np.arange(self.grid_size)\n",
-        "    self.v = np.zeros(self.grid_size)\n",
-        "    self.pi_i = 1 / len(self.actions)\n",
-        "    # we are considering a random policy i.e. uniform probablity for each action\n",
-        "  \n",
-        "  def isTerminalState(self, state_index):\n",
-        "    return state_index == 0 or state_index == 15\n",
-        "    \n",
-        "  def step(self, state_index, action_index):\n",
-        "    if state_index % self.num_columns == 0 and self.actions[action_index] == 'left':\n",
-        "      return state_index, 0\n",
-        "    elif (state_index + 1) % self.num_columns == 0 and self.actions[action_index] == 'right':\n",
-        "      return state_index, 0\n",
-        "    elif state_index + 1 < self.num_columns and self.actions[action_index] == 'up':\n",
-        "      return state_index, 0\n",
-        "    elif state_index + 1 > self.grid_size - self.num_columns and self.actions[action_index] == 'down':\n",
-        "      return state_index, 0\n",
-        "    else:      \n",
-        "      getNextState = {\n",
-        "          'left': -1,\n",
-        "          'right': 1,\n",
-        "          'up': -self.num_columns,\n",
-        "          'down': self.num_columns\n",
-        "      }\n",
-        "      next_state = getNextState[self.actions[action_index]] + state_index\n",
-        "      reward = -1 \n",
-        "      return next_state,reward\n",
-        "   \n",
-        "  def update_vtable(self, state_index): \n",
-        "    num_valid_actions = 0\n",
-        "    v_sum = 0\n",
-        "    for action_index in np.arange(len(self.actions)):\n",
-        "      next_state, reward = self.step(state_index, action_index)\n",
-        "      if next_state == state_index:\n",
-        "        #it means the agent went outside the grid so this action is not possible\n",
-        "        continue\n",
-        "      v_sum += reward + self.v[next_state]\n",
-        "      num_valid_actions += 1\n",
-        "      # counting the number of valid actions to get the correct expectation value\n",
-        "    return (1/num_valid_actions) * v_sum\n",
-        "      \n",
-        "      \n",
-        "  \n",
-        "  def run_iterative_Policy_Eval(self, num_iterations):\n",
-        "    v_copy = np.zeros_like(self.v)\n",
-        "    for i in range(num_iterations):\n",
-        "      for state_ind in self.s:\n",
-        "        if not self.isTerminalState(state_ind):\n",
-        "          v_copy[state_ind] = self.update_vtable(state_ind)\n",
-        "      self.v = v_copy"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "CbsPOk2Fkp5t",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "F = Environment2()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-hagQreCkr_6",
-        "colab_type": "code",
-        "outputId": "92a7d5b9-1a60-46f7-d462-2ed6ff48112e",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "F.v"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 237
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "BQynqGJO3j1T",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "F.run_iterative_Policy_Eval(1)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DDSC4ReEt-Nh",
-        "colab_type": "code",
-        "outputId": "f3b16d7a-8440-4b2e-d704-75ed9824fd27",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 51
-        }
-      },
-      "source": [
-        "F.v"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([ 0., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.,\n",
-              "       -1., -1.,  0.])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 239
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "vbXHCQ8Ms5b7",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "F.run_iterative_Policy_Eval(1)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "M-0gph663sNb",
-        "colab_type": "code",
-        "outputId": "afe2edc8-0ee5-4c86-a4d0-560280f72903",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 85
-        }
-      },
-      "source": [
-        "F.v"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([ 0.        , -1.66666667, -2.        , -1.66666667, -1.66666667,\n",
-              "       -2.        , -2.        , -2.        , -2.        , -2.        ,\n",
-              "       -2.        , -1.66666667, -2.        , -2.        , -1.66666667,\n",
-              "        0.        ])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 115
-        }
-      ]
     },
     {
       "cell_type": "markdown",
@@ -341,7 +129,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# 4 X 4 Grid Experiment"
+        "# 4 X 4 Grid Environment"
       ]
     },
     {
@@ -362,7 +150,7 @@
       "metadata": {
         "id": "rdeQyGDz7aSa",
         "colab_type": "code",
-        "outputId": "afd5545b-2b94-455e-f398-d6cd8880fa6a",
+        "outputId": "e70582d6-b7d0-4743-c1fc-bb70152f4272",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -406,7 +194,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 259
+          "execution_count": 4
         }
       ]
     },
@@ -428,7 +216,7 @@
       "metadata": {
         "id": "1GZRqZuL7uNE",
         "colab_type": "code",
-        "outputId": "fc47f047-a1fe-4162-fd2e-0b9218cb452c",
+        "outputId": "082d6b41-d013-48d7-ee0b-f2a6fd8189db",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -460,7 +248,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 261
+          "execution_count": 6
         }
       ]
     },
@@ -469,7 +257,7 @@
       "metadata": {
         "id": "PuAm27hQ9uT6",
         "colab_type": "code",
-        "outputId": "aa3860d3-0287-4c71-a78f-4d96f95043bc",
+        "outputId": "abcad00f-14b1-4802-eb32-2ead90afb9d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 442
@@ -516,6 +304,109 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VHq816nhBRDj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oJnYV0py_SzO",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def getArrows(A, row_index, col_index):\n",
+        "  neighbours = np.array([-10000, -10000, -10000, -10000])\n",
+        "  arrows = ''\n",
+        "  num_rows, num_cols = A.shape\n",
+        "\n",
+        "  if col_index - 1 >= 0:\n",
+        "    neighbours[0] = A[row_index, col_index - 1]\n",
+        "  if row_index - 1 >= 0:\n",
+        "    neighbours[1] = A[row_index - 1, col_index]\n",
+        "  if row_index + 1 < num_rows:\n",
+        "    neighbours[2] = A[row_index + 1, col_index]\n",
+        "  if col_index + 1 < num_cols:\n",
+        "    neighbours[3] = A[row_index, col_index + 1]\n",
+        "\n",
+        "  max_indices = np.argwhere(neighbours == neighbours.max())\n",
+        "\n",
+        "  if 0 in max_indices:\n",
+        "    arrows += '←'\n",
+        "  if 1 in max_indices:\n",
+        "    arrows += '↑'\n",
+        "  if 2 in max_indices:\n",
+        "    arrows += '↓'\n",
+        "  if 3 in max_indices:\n",
+        "    arrows += '→'\n",
+        "  return arrows\n",
+        "    \n",
+        "def showGreedyAction(A):\n",
+        "  action_matrix = np.full(A.shape, '')\n",
+        "  print(action_matrix.dtype)\n",
+        "  for i in range(A.shape[0]):\n",
+        "    for j in range(A.shape[1]):\n",
+        "      action_matrix[i,j] = getArrows(A, i, j)\n",
+        "  return action_matrix\n",
+        "  "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gqxPc3EHJd1q",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Printing the optimal action policy**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tt5PK674_ygl",
+        "colab_type": "code",
+        "outputId": "9feff0a5-6e85-4440-961b-289dc8028472",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 170
+        }
+      },
+      "source": [
+        "print(A.v)\n",
+        "print(showGreedyAction(A.v))"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[ 0.  -3.5 -4.5 -4.8]\n",
+            " [-3.5 -4.4 -4.7 -4.5]\n",
+            " [-4.5 -4.7 -4.4 -3.5]\n",
+            " [-4.8 -4.5 -3.5  0. ]]\n",
+            "<U1\n",
+            "[['↓' '←' '←' '←']\n",
+            " ['↑' '←' '←' '↓']\n",
+            " ['↑' '←' '↓' '↓']\n",
+            " ['↑' '→' '→' '←']]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Ntm3zL0QATWb",
@@ -543,7 +434,7 @@
       "metadata": {
         "id": "CLbiIHQtAdbo",
         "colab_type": "code",
-        "outputId": "1025ca26-44c8-4520-f852-cc19d54ee995",
+        "outputId": "c93ba88d-d0d6-49f3-b260-d87299283593",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
@@ -597,7 +488,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 264
+          "execution_count": 11
         }
       ]
     },
@@ -619,7 +510,7 @@
       "metadata": {
         "id": "VtYGPytXApDG",
         "colab_type": "code",
-        "outputId": "e207a5a5-417a-46d9-aa1b-42f3040ba7ad",
+        "outputId": "9e8c9535-931d-43e5-9b3b-b0768eb444fc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
@@ -667,7 +558,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 266
+          "execution_count": 13
         }
       ]
     },
@@ -676,7 +567,7 @@
       "metadata": {
         "id": "gcqfR3CJAtuz",
         "colab_type": "code",
-        "outputId": "286d34be-d643-42b2-a23f-ec666acfc6dc",
+        "outputId": "b51ffb92-f807-42be-9479-12170867e253",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -969,6 +860,219 @@
             " [-25.  -25.  -24.8 -24.6 -24.1 -23.3 -21.6 -18.4 -12.3   0. ]]\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WAAfM8RR_UvV",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Simplified Environment Impelmentation(4X4 Grid )"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QygSU6cjkCRZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
+        "class Environment2:\n",
+        "  num_columns = 4\n",
+        "  grid_size = num_columns * num_columns\n",
+        "  \n",
+        "  actions = ['left', 'right', 'up', 'down']\n",
+        "  \n",
+        "  def __init__(self):\n",
+        "    self.s = np.arange(self.grid_size)\n",
+        "    self.v = np.zeros(self.grid_size)\n",
+        "    self.pi_i = 1 / len(self.actions)\n",
+        "    # we are considering a random policy i.e. uniform probablity for each action\n",
+        "  \n",
+        "  def isTerminalState(self, state_index):\n",
+        "    return state_index == 0 or state_index == 15\n",
+        "    \n",
+        "  def step(self, state_index, action_index):\n",
+        "    if state_index % self.num_columns == 0 and self.actions[action_index] == 'left':\n",
+        "      return state_index, 0\n",
+        "    elif (state_index + 1) % self.num_columns == 0 and self.actions[action_index] == 'right':\n",
+        "      return state_index, 0\n",
+        "    elif state_index + 1 < self.num_columns and self.actions[action_index] == 'up':\n",
+        "      return state_index, 0\n",
+        "    elif state_index + 1 > self.grid_size - self.num_columns and self.actions[action_index] == 'down':\n",
+        "      return state_index, 0\n",
+        "    else:      \n",
+        "      getNextState = {\n",
+        "          'left': -1,\n",
+        "          'right': 1,\n",
+        "          'up': -self.num_columns,\n",
+        "          'down': self.num_columns\n",
+        "      }\n",
+        "      next_state = getNextState[self.actions[action_index]] + state_index\n",
+        "      reward = -1 \n",
+        "      return next_state,reward\n",
+        "   \n",
+        "  def update_vtable(self, state_index): \n",
+        "    num_valid_actions = 0\n",
+        "    v_sum = 0\n",
+        "    for action_index in np.arange(len(self.actions)):\n",
+        "      next_state, reward = self.step(state_index, action_index)\n",
+        "      if next_state == state_index:\n",
+        "        #it means the agent went outside the grid so this action is not possible\n",
+        "        continue\n",
+        "      v_sum += reward + self.v[next_state]\n",
+        "      num_valid_actions += 1\n",
+        "      # counting the number of valid actions to get the correct expectation value\n",
+        "    return (1/num_valid_actions) * v_sum\n",
+        "      \n",
+        "      \n",
+        "  \n",
+        "  def run_iterative_Policy_Eval(self, num_iterations):\n",
+        "    v_copy = np.zeros_like(self.v)\n",
+        "    for i in range(num_iterations):\n",
+        "      for state_ind in self.s:\n",
+        "        if not self.isTerminalState(state_ind):\n",
+        "          v_copy[state_ind] = self.update_vtable(state_ind)\n",
+        "      self.v = v_copy"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CbsPOk2Fkp5t",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "F = Environment2()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-hagQreCkr_6",
+        "colab_type": "code",
+        "outputId": "1ba2b3b5-bfdc-45ad-c11f-647635622a68",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "F.v"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BQynqGJO3j1T",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "F.run_iterative_Policy_Eval(1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DDSC4ReEt-Nh",
+        "colab_type": "code",
+        "outputId": "112b79d1-17eb-4050-ee77-285e028c795b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
+      },
+      "source": [
+        "F.v"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1., -1.,\n",
+              "       -1., -1.,  0.])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vbXHCQ8Ms5b7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "F.run_iterative_Policy_Eval(1)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M-0gph663sNb",
+        "colab_type": "code",
+        "outputId": "c2766be0-9e78-4d9d-a974-234d8dcdb8ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        }
+      },
+      "source": [
+        "F.v"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 0.        , -1.66666667, -2.        , -1.66666667, -1.66666667,\n",
+              "       -2.        , -2.        , -2.        , -2.        , -2.        ,\n",
+              "       -2.        , -1.66666667, -2.        , -2.        , -1.66666667,\n",
+              "        0.        ])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
         }
       ]
     }
