--- a/Ex08.ipynb
+++ b/Ex08.ipynb
@@ -150,7 +150,7 @@
       "metadata": {
         "id": "rdeQyGDz7aSa",
         "colab_type": "code",
-        "outputId": "e70582d6-b7d0-4743-c1fc-bb70152f4272",
+        "outputId": "ff53d4ec-91e0-4802-9eb2-6279e63a5d33",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -166,7 +166,7 @@
         "print('initial Value function')\n",
         "A.v"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +216,7 @@
       "metadata": {
         "id": "1GZRqZuL7uNE",
         "colab_type": "code",
-        "outputId": "082d6b41-d013-48d7-ee0b-f2a6fd8189db",
+        "outputId": "c17287b1-5e4e-4472-900f-24e7a6f282aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -226,7 +226,7 @@
         "print('Final Value function')\n",
         "A.v"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +257,7 @@
       "metadata": {
         "id": "PuAm27hQ9uT6",
         "colab_type": "code",
-        "outputId": "abcad00f-14b1-4802-eb32-2ead90afb9d4",
+        "outputId": "3507ec2a-2172-437a-e8d0-f5d5ece70c35",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 442
@@ -268,7 +268,7 @@
         "  print('----- Value Iteration after step ',i, '-------------------')\n",
         "  print(A.v_copy[i])"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,26 +306,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VHq816nhBRDj",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "oJnYV0py_SzO",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         "def getArrows(A, row_index, col_index):\n",
-        "  neighbours = np.array([-10000, -10000, -10000, -10000])\n",
+        "  neighbours = np.array([-10000, -10000, -10000, -10000], dtype=np.float32)\n",
         "  arrows = ''\n",
         "  num_rows, num_cols = A.shape\n",
         "\n",
@@ -339,13 +326,17 @@
         "    neighbours[3] = A[row_index, col_index + 1]\n",
         "\n",
         "  max_indices = np.argwhere(neighbours == neighbours.max())\n",
-        "\n",
+        "  \n",
         "  if 0 in max_indices:\n",
         "    arrows += '←'\n",
         "  if 1 in max_indices:\n",
-        "    arrows += '↑'\n",
-        "  if 2 in max_indices:\n",
+        "    if 2 in max_indices:\n",
+        "      arrows += '↕'\n",
+        "    else:\n",
+        "      arrows += '↑'\n",
+        "  elif 2 in max_indices:\n",
         "    arrows += '↓'\n",
+        "  \n",
         "  if 3 in max_indices:\n",
         "    arrows += '→'\n",
         "  return arrows\n",
@@ -377,7 +368,7 @@
       "metadata": {
         "id": "tt5PK674_ygl",
         "colab_type": "code",
-        "outputId": "9feff0a5-6e85-4440-961b-289dc8028472",
+        "outputId": "5115bc6b-0dec-4b98-f695-efb833b536fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
@@ -387,7 +378,7 @@
         "print(A.v)\n",
         "print(showGreedyAction(A.v))"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,7 +390,7 @@
             "<U1\n",
             "[['↓' '←' '←' '←']\n",
             " ['↑' '←' '←' '↓']\n",
-            " ['↑' '←' '↓' '↓']\n",
+            " ['↑' '↑' '↓' '↓']\n",
             " ['↑' '→' '→' '←']]\n"
           ],
           "name": "stdout"
@@ -434,7 +425,7 @@
       "metadata": {
         "id": "CLbiIHQtAdbo",
         "colab_type": "code",
-        "outputId": "c93ba88d-d0d6-49f3-b260-d87299283593",
+        "outputId": "3ed06195-074b-41a8-bc8b-382b17217c99",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
@@ -450,7 +441,7 @@
         "print('initial Value function')\n",
         "B.v"
       ],
-      "execution_count": 0,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -510,7 +501,7 @@
       "metadata": {
         "id": "VtYGPytXApDG",
         "colab_type": "code",
-        "outputId": "9e8c9535-931d-43e5-9b3b-b0768eb444fc",
+        "outputId": "bfaaf418-983d-45de-9c01-e0b9da792f33",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
@@ -520,7 +511,7 @@
         "print('Final Value function')\n",
         "B.v"
       ],
-      "execution_count": 0,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -567,7 +558,7 @@
       "metadata": {
         "id": "gcqfR3CJAtuz",
         "colab_type": "code",
-        "outputId": "b51ffb92-f807-42be-9479-12170867e253",
+        "outputId": "487aa48d-5ca2-4a2f-85fc-b1cb3b8ef5b9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -578,7 +569,7 @@
         "  print('----- Value Iteration after step ',i, '-------------------')\n",
         "  print(B.v_copy[i])"
       ],
-      "execution_count": 0,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -864,6 +855,41 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F0rI3AIZsEFs",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        },
+        "outputId": "49b8bd00-7eb8-4007-ec13-3e0331732cf6"
+      },
+      "source": [
+        "print(showGreedyAction(B.v))"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<U1\n",
+            "[['↓' '←' '←' '←' '←' '←' '←' '←' '←' '←']\n",
+            " ['↑' '←' '←' '←' '←' '←' '←' '←' '←' '↓']\n",
+            " ['↑' '↑' '←' '←' '←' '←' '←' '←' '↓' '↓']\n",
+            " ['↑' '↑' '↑' '←' '←' '←' '←' '↓' '↓' '↓']\n",
+            " ['↑' '↑' '↑' '↑' '←' '↓' '↓' '↓' '↓' '↓']\n",
+            " ['↑' '↑' '↑' '↑' '→' '↓' '↓' '↓' '↓' '↓']\n",
+            " ['↑' '↑' '↑' '↑' '→' '→' '↓' '↓' '↓' '↓']\n",
+            " ['↑' '↑' '↑' '→' '→' '→' '→' '↓' '↓' '↓']\n",
+            " ['↑' '↑' '→' '→' '→' '→' '→' '→' '↓' '↓']\n",
+            " ['↑' '→' '→' '→' '→' '→' '→' '→' '→' '←']]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "WAAfM8RR_UvV",
@@ -961,7 +987,7 @@
       "metadata": {
         "id": "-hagQreCkr_6",
         "colab_type": "code",
-        "outputId": "1ba2b3b5-bfdc-45ad-c11f-647635622a68",
+        "outputId": "81b6dba0-1866-4f5e-b83d-4b2315a164e0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -970,7 +996,7 @@
       "source": [
         "F.v"
       ],
-      "execution_count": 0,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -982,7 +1008,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 18
         }
       ]
     },
@@ -1004,7 +1030,7 @@
       "metadata": {
         "id": "DDSC4ReEt-Nh",
         "colab_type": "code",
-        "outputId": "112b79d1-17eb-4050-ee77-285e028c795b",
+        "outputId": "9ec55a98-04da-4459-e016-9856cba52d5c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -1013,7 +1039,7 @@
       "source": [
         "F.v"
       ],
-      "execution_count": 0,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1026,7 +1052,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 20
         }
       ]
     },
@@ -1048,7 +1074,7 @@
       "metadata": {
         "id": "M-0gph663sNb",
         "colab_type": "code",
-        "outputId": "c2766be0-9e78-4d9d-a974-234d8dcdb8ea",
+        "outputId": "0bda5e1f-8dad-4d1f-a0d9-29cf99124dd2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 85
@@ -1057,7 +1083,7 @@
       "source": [
         "F.v"
       ],
-      "execution_count": 0,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1072,7 +1098,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 22
         }
       ]
     }
